--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="section-title">
                 <h2>Skills</h2>
                 <p>As a newcomer in data science, I have studied the relevant skill which will help me to excel my
-                    career as I have learnt Fundaments of data science , Data Manipulation and analysis , Data
+                    career as I have learnt Fundamentals of data science , Data Manipulation and analysis , Data
                     Visualization , Machine learning,
                     Model deployment , Communication and Storytelling.
                 </p>
@@ -404,7 +404,8 @@
             </div>
 
            <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
                         <img src="assets/img/Internshala.PNG" class="img-fluid" alt="">
                         <div class="portfolio-links">
@@ -412,9 +413,9 @@
                                class="portfolio-lightbox" title="Data Science Training Certificate"><i class="bx bx-plus"></i></a>
                         </div>
                     </div>
-                </div>               
+                </div>
 				
-		<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+				<div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
                         <img src="assets/img/spark foundation.PNG" class="img-fluid" alt="">
                         <div class="portfolio-links">
