--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
             <div class="row" data-aos="fade-in">
 
-                <div class="col-lg-5 d-flex align-items-stretch">
+                <div class="col-lg-5 d-flex align-items-stretch" style="width: 900mm">
                     <div class="info">
                         <div class="address">
                             <i class="bi bi-geo-alt"></i>
